# lang

./: ReadMe.md  ex.txt  lang.cabal  phases.txt  source.txt  todo.txt
app/: Main.hs
src/: Base.hs  Parser.hs  Store.hs  Types.hs
src/CodeGeneration/: CCompiler.hs  CGenerator.hs  CodeGeneration.hs  Types.hs
src/Parser/: Lexer.hs  Parser.hs  Types.hs
src/SemanticAnalysis/: TopLevelParsing.hs  TypeChecking.hs  TypeResolution.hs  Types.hs
test/: CCompilerSpec.hs  CodeGenerationSpec.hs  ParserSpec.hs  Spec.hs  TypeCheckingExamples.txt  TypeCheckingSpec.hs  TypeResolutionSpec.hs
