name:                lang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  extensions: NoImplicitPrelude, OverloadedStrings
  exposed-modules:     
                        Parser.Parser
                      , SemanticAnalysis.TypeResolution
                      , SemanticAnalysis.TypeChecking
                      , SemanticAnalysis.TopLevelParsing
                      , CodeGeneration.CGenerator
                      , Parser.Lexer
                      , Types
                      , Base
  build-depends:       base >= 4.7 && < 5
                      , parsec >= 3.1.11 && < 3.2.0
                      , unordered-containers >= 0.2.7 && < 0.3.0
                      , text >= 1.2.2 && < 1.3
                      , classy-prelude >= 0.12.0 && < 1.0
                      , semigroups >= 0.18.0 && < 0.19
                      , mtl       >= 2.2.1 && < 2.3
                      , extra     >= 1.4 && < 2.0
  default-language:    Haskell2010

executable lang-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lang
  default-language:    Haskell2010

test-suite lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  extensions: NoImplicitPrelude, OverloadedStrings
  build-depends:       base
                     , lang
                     , hspec >= 2.2.3 && < 2.3.0
                      , parsec >= 3.1.11 && < 3.2.0
                     , unordered-containers >= 0.2.7 && < 0.3.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lang
